# chemsim

./: .gitignore  CHEMSIM_SPEC.md  CLAUDE.md  README.md  index.html  launch.sh  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  ASK_PANEL.md  GRANT_MECHANISMS_REPORT.md  INSTRUCTOR_GUIDE.md  PERFORMANCE.md  PRIOR_ART_REPORT.md  SCIENCE_VALIDATION.md  STUDENT_GUIDE.md  TECHNICAL_FEASIBILITY_REPORT.md
docs/labs/: LAB_1_SALT_AND_ICE.md
public/: manifest.json  sw.js
scripts/: generate_molecule_data.py  render_ice_seed.py
scripts/validation/: compare.py  compute_references.py  find_water_dimer_minimum.py
src/: main.ts
src/data/: README.md
src/data/molecules/: ammonia.json  carbon_dioxide.json  ethanol.json  (+10 more)
src/physics/: Cargo.toml
src/physics/.cargo/: config.toml
src/physics/src/: coulomb.rs  deformation.rs  integrator.rs  lennard_jones.rs  lib.rs  persistent_pool.rs  rotation.rs  system.rs  thermostat.rs
src/physics/tests/: phase_behavior.rs  validation.rs
src/scene/: CloudDeformer.ts  InteractionVisualizer.ts  MoleculeRenderer.ts  SceneManager.ts  VRManager.ts
src/ui/: AskPanel.ts  Experiments.ts  ResultsExport.ts  Tutorial.ts
src/utils/: constants.ts  iceIh.ts  loader.ts  spacing.ts  waterModels.ts
tests/e2e/: ice_seed_visual.spec.ts  mode1_basic.spec.ts  mode1_drag.spec.ts  mode1_pairs.spec.ts  mode2_basic.spec.ts  performance.spec.ts  pool_bench.spec.ts  rayon_init.spec.ts  rayon_perf.spec.ts  ui_screenshot.spec.ts  vr_entry.spec.ts
tests/unit/: data_loader.test.ts
