[package]
name = "chemsim-physics"
version = "0.1.0"
edition = "2021"
description = "WebAssembly physics engine for ChemSim molecular simulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
