[package]
name = "chemsim-physics"
version = "0.1.0"
edition = "2021"
description = "WebAssembly physics engine for ChemSim molecular simulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[features]
default = []
parallel = ["rayon", "wasm-bindgen-rayon"]

[profile.release]
opt-level = 3
lto = true
